--- a/heroes/shakti.html
+++ b/heroes/shakti.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,109 +5,105 @@
     <title>Shakti | ComicLibrary</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Main CSS -->
+    <!-- Global CSS -->
     <link rel="stylesheet" href="../css/style.css">
 
-    <!-- Shakti Theme CSS -->
+    <!-- Shakti Theme -->
     <link rel="stylesheet" href="../css/shakti.css">
 </head>
 <body>
 
 <!-- HEADER -->
 <header class="header">
-  <div class="logo">ComicLibrary</div>
+    <div class="logo">ComicLibrary</div>
 
-  <div class="header-right">
-    <div class="search-icon">🔍</div>
+    <div class="header-right">
+        <div class="search-icon">🔍</div>
 
-    <div class="menu" id="menuBtn">
-      <span></span>
-      <span></span>
-      <span></span>
+        <div class="menu" id="menuBtn">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </div>
-  </div>
 
-  <div class="dropdown" id="dropdownMenu">
-    <a href="../index.html">Home</a>
-    <a href="#">Trending</a>
-    <a href="#">Categories</a>
-    <a href="#">Contact</a>
-  </div>
+    <div class="dropdown" id="dropdownMenu">
+        <a href="../index.html">Home</a>
+        <a href="#" class="active">Heroes</a>
+        <a href="#">Trending</a>
+        <a href="#">Contact</a>
+    </div>
 </header>
 
 <!-- SEARCH -->
 <div class="search-overlay" id="searchOverlay">
-  <input type="text" placeholder="Search comics...">
+    <input type="text" placeholder="Search comics...">
 </div>
 
 
-<!-- SHAKTI PAGE -->
+<!-- HERO SECTION -->
 <div class="hero-detail shakti-bg">
 
-    <!-- Profile -->
     <div class="hero-profile">
         <img src="../images/heroes/shakti.jpg" alt="Shakti">
 
         <div class="hero-info">
             <h1>Shakti</h1>
+
+            <!-- 20 words -->
             <p>
-                Shakti is a powerful female superhero blessed with divine energy.
-                She possesses immense strength, energy projection abilities,
-                and the courage to fight powerful enemies. Shakti represents
-                power, determination, and justice.
+                Powerful divine heroine with super strength, energy blasts,
+                flight, combat skills, courage, protecting Earth from powerful villains and threats.
             </p>
         </div>
     </div>
 
-    <!-- Powers -->
-    <div class="powers">
-        <h2>Powers & Abilities</h2>
-        <ul>
-            <li>Superhuman strength and endurance</li>
-            <li>Energy blast and power projection</li>
-            <li>Flight ability</li>
-            <li>Enhanced reflexes and combat skills</li>
-            <li>Divine energy transformation</li>
-        </ul>
-    </div>
+    <!-- Glowing Divider -->
+    <div class="glow-line"></div>
 
-    <!-- Comics -->
+
+    <!-- COMICS (PDF READY) -->
     <div class="comics-section">
-        <h2>Popular Comics</h2>
+        <h2>Comics (PDF)</h2>
 
-        <div class="comics-grid">
+        <ol class="comics-list">
 
-            <div class="comic-card">
-                <img src="../images/comics/shakti1.jpg">
-                <span>Shakti Ka Uday</span>
-            </div>
+            <li>
+                <a href="../pdf/shakti/shakti_01.pdf" target="_blank">
+                    #001 Shakti Ka Uday
+                </a>
+            </li>
 
-            <div class="comic-card">
-                <img src="../images/comics/shakti2.jpg">
-                <span>Power Strike</span>
-            </div>
+            <li>
+                <a href="../pdf/shakti/shakti_02.pdf" target="_blank">
+                    #002 Power Strike
+                </a>
+            </li>
 
-            <div class="comic-card">
-                <img src="../images/comics/shakti3.jpg">
-                <span>Shakti vs Darkness</span>
-            </div>
+            <li>
+                <a href="../pdf/shakti/shakti_03.pdf" target="_blank">
+                    #003 Shakti vs Darkness
+                </a>
+            </li>
 
-            <div class="comic-card">
-                <img src="../images/comics/shakti4.jpg">
-                <span>Divine Warrior</span>
-            </div>
+            <li>
+                <a href="../pdf/shakti/shakti_04.pdf" target="_blank">
+                    #004 Divine Warrior
+                </a>
+            </li>
 
-        </div>
+        </ol>
     </div>
 
 </div>
 
-<footer class="footer">
-    <div class="footer-container">
-        <p>© 2026 ComicLibrary</p>
-    </div>
-</footer>
 
-<script src="../js/shakti.js"></script>
+<!-- COPYRIGHT ONLY -->
+<div class="copyright">
+    © 2026 ComicLibrary
+</div>
+
+<script src="../js/script.js"></script>
+
 </body>
 </html>
