--- a/reader/pdf_reader.html
+++ b/reader/pdf_reader.html
@@ -7,20 +7,24 @@
 <link rel="stylesheet" href="css/reader.css">
 </head>
 
-<body>
+<body oncontextmenu="return false">
 
 <header>
     <button onclick="goBack()">← Back</button>
-    <div>
+
+    <div class="controls">
         <button onclick="prevPage()">◀</button>
         <span id="pageInfo"></span>
         <button onclick="nextPage()">▶</button>
         <button onclick="zoomIn()">+</button>
         <button onclick="zoomOut()">−</button>
+        <button onclick="toggleFullScreen()">⛶</button>
     </div>
 </header>
 
-<canvas id="pdfCanvas"></canvas>
+<div class="viewer">
+    <canvas id="pdfCanvas"></canvas>
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
 <script src="js/reader.js"></script>
