--- a/heroes/nagraj.html
+++ b/heroes/nagraj.html
@@ -70,8 +70,9 @@
         <ol class="comics-list">
 
             <li>
-                <a href="../pdf/nagraj/nagraj_01.pdf" target="_blank">
-                    #001 Nagraj Janm Katha
+                <a href="reader.html?id=
+                    17gx7ThOkUeTq1MgO1Gv1oxSubSc4JCll
+                    " class="read-btn"> Read Now
                 </a>
             </li>
 
