--- a/heroes/nagraj.html
+++ b/heroes/nagraj.html
@@ -72,12 +72,14 @@
             <li>
                 <a href="reader.html?id=
                     17gx7ThOkUeTq1MgO1Gv1oxSubSc4JCll
-                    " class="read-btn"> Read Now
+                    " class="read-btn"> Nagraj
                 </a>
             </li>
 
             <li>
-                <a href="../pdf/nagraj/nagraj_02.pdf" target="_blank">
+                <a href="
+                    https://drive.google.com/file/d/1os8A2QJfaKvL1MYX7KHUslu5Lpr_2TUn/view?usp=drivesdk
+                    " target="_blank">
                     #002 Nagraj Ki Kabra
                 </a>
             </li>
