--- a/heroes/nagraj.html
+++ b/heroes/nagraj.html
@@ -70,10 +70,9 @@
         <ol class="comics-list">
 
             <li>
-                <a href="reader.html?id=
-                    17gx7ThOkUeTq1MgO1Gv1oxSubSc4JCll
-                    " class="read-btn"> Nagraj
-                </a>
+                <a href="reader.html?id=1os8A2QJfaKvL1MYX7KHUslu5Lpr_2TUn">
+   Read Now
+</a>
             </li>
 
             <li>
