--- a/heroes/nagraj.html
+++ b/heroes/nagraj.html
@@ -70,9 +70,7 @@
         <ol class="comics-list">
 
             <li>
-                <a href="reader.html?id=1os8A2QJfaKvL1MYX7KHUslu5Lpr_2TUn">
-   Read Now
-</a>
+                <a href="https://drive.google.com/uc?export=download&id=17gx7ThOkUeTq1MgO1Gv1oxSubSc4JCll">NAGRAJ</a>
             </li>
 
             <li>
