--- a/heroes/nagraj.html
+++ b/heroes/nagraj.html
@@ -69,31 +69,25 @@
 
         <ol class="comics-list">
 
-            <li>
-                <a href="https://drive.google.com/uc?export=download&id=17gx7ThOkUeTq1MgO1Gv1oxSubSc4JCll">NAGRAJ</a>
-            </li>
+            <ul>
+<li>
+<a href="reader.html?id=17gx7ThOkUeTq1MgO1Gv1oxSubSc4JCll">
+Nagraj - Issue 1
+</a>
+</li>
 
-            <li>
-                <a href="
-                    https://drive.google.com/file/d/1os8A2QJfaKvL1MYX7KHUslu5Lpr_2TUn/view?usp=drivesdk
-                    " target="_blank">
-                    #002 Nagraj Ki Kabra
-                </a>
-            </li>
+<li>
+<a href="reader.html?id=1DhruvaIDxxxx">
+Super Commando Dhruva - Issue 1
+</a>
+</li>
 
-            <li>
-                <a href="../pdf/nagraj/nagraj_03.pdf" target="_blank">
-                    #003 Vishkanya
-                </a>
-            </li>
-
-            <li>
-                <a href="../pdf/nagraj/nagraj_04.pdf" target="_blank">
-                    #004 Nagraj Aur Shango
-                </a>
-            </li>
-
-        </ol>
+<li>
+<a href="reader.html?id=1DogaIDxxxx">
+Doga - Issue 1
+</a>
+</li>
+</ul>
     </div>
 
 </div>
