--- a/heroes/nagraj.html
+++ b/heroes/nagraj.html
@@ -77,8 +77,8 @@ Nagraj
 </li>
 
 <li>
-<a href="reader.html?id=1DhruvaIDxxxx">
-Super Commando Dhruva - Issue 1
+<a href="https://drive.google.com/file/d/1os8A2QJfaKvL1MYX7KHUslu5Lpr_2TUn/view?usp=drivesdk">
+Nagraj ki Kabar
 </a>
 </li>
 
