--- a/heroes/nagraj.html
+++ b/heroes/nagraj.html
@@ -69,25 +69,51 @@
 
         <ol class="comics-list">
 
-            <ul>
+            <ol>
 <li>
-<a href="reader.html?id=17gx7ThOkUeTq1MgO1Gv1oxSubSc4JCll">
-Nagraj
+<a href="https://drive.google.com/file/d/17gx7ThOkUeTq1MgO1Gv1oxSubSc4JCll/view?usp=drivesdk">
+NAGRAJ
 </a>
 </li>
 
 <li>
-<a href="https://drive.google.com/file/d/1os8A2QJfaKvL1MYX7KHUslu5Lpr_2TUn/view?usp=drivesdk">
-Nagraj ki Kabar
+  <a href="https://drive.google.com/file/d/1os8A2QJfaKvL1MYX7KHUslu5Lpr_2TUn/view?usp=drivesdk">
+  NAGRAJ KI KABRA
 </a>
+  </li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1UohSLl4unaDxaLWEtJZlP4NnJUTe1xSl/view?usp=drivesdk">
+    NAGRAJ KA BADLA
+  </a>
+</li>
+  
+<li>
+  <a href="https://drive.google.com/file/d/1EQp_IvdV39olgmb_ducKSJbIjZiYvY4B/view?usp=drivesdk"
+   >NAGRAJ KI HONG-KONG YATRAA</a> 
+  </li>
+
+<li>
+  <a href="https://drive.google.com/file/d/17mzCNUnlm20aZtQBz2ifjtnNHhQKcxlo/view?usp=drivesdk"
+    >NAGRAJ OR SANGOO</a>
+</li>
+<li>
+  <a href="https://drive.google.com/file/d/1qbcWJ32Motg6k0zSttk9tbJW68Pco10u/view?usp=drivesdk"
+   >KHOONI YATRAA</a> 
+  </li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1EyD-ZABFTcOwfpBIzZgXmy9b0QhIusLl/view?usp=drivesdk">
+    NAGRAJ KA INSAAF
+  </a>
 </li>
 
 <li>
-<a href="reader.html?id=1DogaIDxxxx">
-Doga - Issue 1
-</a>
-</li>
-</ul>
+  <a href="https://drive.google.com/file/d/180hpZX4MpxEus_3NQLba-wdVeFtZXHtj/view?usp=drivesdk"
+    PRALAYANKARI NAGRAJ
+  </li>
+
+</ol>
     </div>
 
 </div>
