--- a/heroes/nagraj.html
+++ b/heroes/nagraj.html
@@ -104,21 +104,16 @@ NAGRAJ
 
 <li>
   <a href="https://drive.google.com/file/d/1EyD-ZABFTcOwfpBIzZgXmy9b0QhIusLl/view?usp=drivesdk">
-    NAGRAJ KA INSAAF
-  </a>
+    NAGRAJ KA INSAAF</a>
 </li>
 
 <li>
-  <a href="https://drive.google.com/file/d/180hpZX4MpxEus_3NQLba-wdVeFtZXHtj/view?usp=drivesdk"
-    PRALAYANKARI NAGRAJ
+  <a href="https://drive.google.com/file/d/180hpZX4MpxEus_3NQLba-wdVeFtZXHtj/view?usp=drivesdk">
+      PRALAYANKARI NAGRAJ</a>
   </li>
-
 </ol>
     </div>
-
 </div>
-
-
 <!-- ========== COPYRIGHT ONLY ========== -->
 <div class="copyright">
     © 2026 ComicLibrary
