--- a/heroes/nagraj.html
+++ b/heroes/nagraj.html
@@ -71,44 +71,44 @@
 
             <ol>
 <li>
-<a href="https://drive.google.com/file/d/17gx7ThOkUeTq1MgO1Gv1oxSubSc4JCll/view?usp=drivesdk">
+<a href="https://drive.google.com/file/d/17gx7ThOkUeTq1MgO1Gv1oxSubSc4JCll/preview">
 NAGRAJ
 </a>
 </li>
 
 <li>
-  <a href="https://drive.google.com/file/d/1os8A2QJfaKvL1MYX7KHUslu5Lpr_2TUn/view?usp=drivesdk">
+  <a href="https://drive.google.com/file/d/1os8A2QJfaKvL1MYX7KHUslu5Lpr_2TUn/preview">
   NAGRAJ KI KABRA
 </a>
   </li>
 
 <li>
-  <a href="https://drive.google.com/file/d/1UohSLl4unaDxaLWEtJZlP4NnJUTe1xSl/view?usp=drivesdk">
+  <a href="https://drive.google.com/file/d/1UohSLl4unaDxaLWEtJZlP4NnJUTe1xSl/preview">
     NAGRAJ KA BADLA
   </a>
 </li>
   
 <li>
-  <a href="https://drive.google.com/file/d/1EQp_IvdV39olgmb_ducKSJbIjZiYvY4B/view?usp=drivesdk"
+  <a href="https://drive.google.com/file/d/1EQp_IvdV39olgmb_ducKSJbIjZiYvY4B/preview"
    >NAGRAJ KI HONG-KONG YATRAA</a> 
   </li>
 
 <li>
-  <a href="https://drive.google.com/file/d/17mzCNUnlm20aZtQBz2ifjtnNHhQKcxlo/view?usp=drivesdk"
+  <a href="https://drive.google.com/file/d/17mzCNUnlm20aZtQBz2ifjtnNHhQKcxlo/preview"
     >NAGRAJ OR SANGOO</a>
 </li>
 <li>
-  <a href="https://drive.google.com/file/d/1qbcWJ32Motg6k0zSttk9tbJW68Pco10u/view?usp=drivesdk"
+  <a href="https://drive.google.com/file/d/1qbcWJ32Motg6k0zSttk9tbJW68Pco10u/preview"
    >KHOONI YATRAA</a> 
   </li>
 
 <li>
-  <a href="https://drive.google.com/file/d/1EyD-ZABFTcOwfpBIzZgXmy9b0QhIusLl/view?usp=drivesdk">
+  <a href="https://drive.google.com/file/d/1EyD-ZABFTcOwfpBIzZgXmy9b0QhIusLl/preview">
     NAGRAJ KA INSAAF</a>
 </li>
 
 <li>
-  <a href="https://drive.google.com/file/d/180hpZX4MpxEus_3NQLba-wdVeFtZXHtj/view?usp=drivesdk">
+  <a href="https://drive.google.com/file/d/180hpZX4MpxEus_3NQLba-wdVeFtZXHtj/preview">
       PRALAYANKARI NAGRAJ</a>
   </li>
 </ol>
