--- a/heroes/nagraj.html
+++ b/heroes/nagraj.html
@@ -71,9 +71,10 @@
 
             <ol>
 <li>
-<a href="https://drive.google.com/file/d/17gx7ThOkUeTq1MgO1Gv1oxSubSc4JCll/preview">
-NAGRAJ
-</a>
+  <a href="https://docs.google.com/gview?embedded=true&url=https://drive.google.com/uc?id=17gx7ThOkUeTq1MgO1Gv1oxSubSc4JCll"
+     target="_blank">
+    NAGRAJ
+  </a>
 </li>
 
 <li>
