--- a/heroes/dhruva.html
+++ b/heroes/dhruva.html
@@ -69,29 +69,45 @@
         <ol class="comics-list">
 
             <li>
-                <a href="../pdf/dhruva/dhruva_01.pdf" target="_blank">
-                    #001 Pratishodh Ki Jwala
-                </a>
-            </li>
+  <a href="https://drive.google.com/file/d/1kKNhsj2w7Dumi_gVsjmGzoghmkWj-jMP/preview">
+  BARF KI CHITA</a>
+</li>
 
-            <li>
-                <a href="../pdf/dhruva/dhruva_02.pdf" target="_blank">
-                    #002 Khooni Khandaan
-                </a>
-            </li>
+<li>
+  <a href="https://drive.google.com/file/d/1-chKWnCapYK4opL1LXXm1yQ_HnF1Aq15/preview">
+    GRANDMASTER ROBO
+  </a>
+</li>
 
-            <li>
-                <a href="../pdf/dhruva/dhruva_03.pdf" target="_blank">
-                    #003 Chumba Ka Chakravyuh
-                </a>
-            </li>
+<li>
+  <a href="https://drive.google.com/file/d/1ZWEAAwYzre27TVWRrNNFuazvVmyBXQ_o/preview">
+    MUJHE MAUT CHAHIYE
+  </a>
+</li>
 
-            <li>
-                <a href="../pdf/dhruva/dhruva_04.pdf" target="_blank">
-                    #004 Grand Master Robo
-                </a>
-            </li>
+<li>
+  <a href="https://drive.google.com/file/d/13os2K4C4MJuBt_6Efubyo3mPw_7S1sRg/preview">
+    ROMAN HATIYARA
+  </a>
+</li>
 
+<li>
+  <a href="https://drive.google.com/file/d/1azRBWi1VyfwiLg8m20EULCbLb4HP4Ril/preview">
+    RUHON KA SHIKANJA
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1IgEi5GYp6kRS8PbUmJPb6MXCMBAJqkmO/preview">
+    SAMUNDAR KA SHAITAN
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/17Ky2GZpv0mV3hHSjDxFeh7cSCFBrpToI/preview">
+    SWARG KI TABAHI
+  </a>
+</li>
         </ol>
     </div>
 
