--- a/heroes/nagraj.html
+++ b/heroes/nagraj.html
@@ -107,7 +107,161 @@
   <a href="https://drive.google.com/file/d/1EyD-ZABFTcOwfpBIzZgXmy9b0QhIusLl/preview">
     NAGRAJ KA INSAAF</a>
 </li>
+<li>
+  <a href="https://drive.google.com/file/d/1PgpdFB0oGU2WJ5QQ9ZGS0ErGhg_mxhrU/preview">
+    KHOONI KABILA
+  </a>
+</li>
 
+<li>
+  <a href="https://drive.google.com/file/d/1y9EEoy-jmfX2MecqWlLMbCtR6MSc_ubz/preview">
+    KOBRAGHATI
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1RMSPELrcvwMT3mB3XuU9x4FglbunlMqh/preview">
+    BACHCHOO KE DUSHMAN
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1DoBjwVbWo4Uy2RXXrGcgtFn7l5IhCAf0/preview">
+    PRALAYANKARI MANI
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1YWq0weFlKqUzujUxrvvaLG-M3paXxo3P/preview">
+    SHANKAR-SHAHANSHAH
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1K6RB1wI2-LWy6iVr8TAmzqpceadGp91H/preview">
+    ICHCHHADHAARI-NAGRAJ
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1RCv8swuZcz48D0rtMroU3iIYFeJhsc-F/preview">
+    KAALDOOT
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1ZJl-uuPeeo-9VXCf8v4Q4zqsmUXXCOzl/preview">
+    JADUGAR SHAKURA
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/18bsKt8XmVQKdI9o_KFSwkfwKKXO95HjO/preview">
+    BAUNA SHAITAN
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1hc3ut_aNiYgzHDchMul487vcDew0k95_/preview">
+    TAJMAHAL KI CHORI
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1GDAkA_7rg2BM7cV_V273BgW0o2aZ2H-N/preview">
+    LAAL MAUT
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/12k51tU39Zj8Ihbj-AljcKT9B0lX_RiUq/preview">
+    Thodanga
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/12CZgJ1iiOuIa2tD2a-bExd7Q9sRHoucL/preview">
+    NAGRAJ OR TUFAN JU
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/13WUIdiL3HQk0LjJQR89nMub625dePSx7/preview">
+    JADOO KA SHAHENSHAH
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1YCZ4V_0apDvdXjtGvJy-TB5hHRusc5V2/preview">
+    NAGINA KA JAAL
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1eT6x4UDrj58gZzqHCER1z-EHq5uXzcue/preview">
+    AJGAR KA TOOFAN
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1V0K6rU1bIOsGIwv5sQhU5_hEzwtKCxq0/preview">
+    BAKORA KA JAADU
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1heyI8UktVNSiKEkDQW1CPoloJHFGdgpL/preview">
+    PYRAMIDO KI RANI
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1BKTEzoflSqXObyMUgn0yodHI624wuz9K/preview">
+    MR.420
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1yi4CCgSIWlungPcQ1F_iSmd4Ad0HKO1h/preview">
+    THODANGA KI MAUT
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1gcBj-1BD9GQoY5W-T_bvrinsyLor1gUp/preview">
+    BEM BEM MIGELO
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1VBzkQZfPIigtckDdWKNOuIeDQsgeSTsK/preview">
+    PHIR AAYA NAGDANT
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1LUaWLZKO9pV2hMgrClVzIaiCnszLpps7/preview">
+    NAGINA
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1mzS8gGvf_cobYEdZTN7jxkVskR7XIw2l/preview">
+    Miss KILLER
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1zD7lgBxyER6mP4g69vdqZwKAQRXn6-vt/preview">
+    NAGRAJ AUR TUTNTU
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1OuqxFo_c0kIwZabU6aLo3bgc5N2XsIu_/preview">
+    ADRASHYA HATYARA
+  </a>
+    </li>
 <li>
   <a href="https://drive.google.com/file/d/180hpZX4MpxEus_3NQLba-wdVeFtZXHtj/preview">
       PRALAYANKARI NAGRAJ</a>
