--- a/heroes/nagraj.html
+++ b/heroes/nagraj.html
@@ -256,7 +256,108 @@
     NAGRAJ AUR TUTNTU
   </a>
 </li>
+<li>
+  <a href="https://drive.google.com/file/d/1MKYpDkS7_k1JTFVNlEjyHsjvHdIxJZPd/preview">
+    KANJA
+  </a>
+</li>
 
+<li>
+  <a href="https://drive.google.com/file/d/11sDYBqEt_uWSvlcEHck8P-JKo4HlZXOU/preview">
+    PAAPRAJ
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1Y63yvpt42Al4uMDQzFldrdGoNTO1dHcz/preview">
+    VIJETA NAGRAJ
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1g4AnuTIYfBhtH_jQ3bzYHS-jjCd2Sc5P/preview">
+    VISHARPI KI SHAADI
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1Xrr7SJETZceM4t03_AoK_gGy4Wo0kadh/preview">
+    SHAKURA KA CHAKARVYUE
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1PiBVOv7gbg1weyutbcZ_-Emp3_YWfsaJ/preview">
+    NAGRAJ KA ANTH
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1_Z1Au3tMYerPO_RMfQXmroXzV04DNmte/preview">
+    JAHAR
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1j8bHbctoAewWVK84e56zhobp3enM_bF2/preview">
+    NAGPASHA
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1QTBcdgCugVg3Cw-D30CR1v2CqAACJhPk/preview">
+    KHAJANA
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1fVIobgnTDuIPKe4DhNrUfTRicnA_n9Q_/preview">
+    CRIME KING
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1z7gu3RsSE7UtSAQVq8mh91MZgHBXfN3I/preview">
+    VISHKANIYA
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1j3N3On0Wk4AjvDq4f-BjfKulgvY1E8vg/preview">
+    SNAKE PARK
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1kgbhUYbp_phZf-cW-uXQyIdzk0xMqP36/preview">
+    ICHCHADHARI
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1i__zq2uBeBJTSUmI4p5jzsyUEtJoXVWb/preview">
+    KHUNI KHOJ
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1syT7TV8iryo0iKi2SOzc019Jmq6HCZ-b/preview">
+    NAGRAJ KA DUSHMAN
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1Ta74GSd9I0ozr2u1eFV3dsxg7I9GiD4f/preview">
+    NAGRAJ OR DHRUVA
+  </a>
+</li>
+
+<li>
+  <a href="https://drive.google.com/file/d/1FyTOZ3UM5qH0AMCIQQJfhkFJcLYoFIYU/preview">
+    RAJNAGAR KI TABAHI
+  </a>
+      </li>
+                
 <li>
   <a href="https://drive.google.com/file/d/1OuqxFo_c0kIwZabU6aLo3bgc5N2XsIu_/preview">
     ADRASHYA HATYARA
