--- a/index.html
+++ b/index.html
@@ -111,8 +111,21 @@
 <section class="trending">
   <h2>Trending Comics</h2>
   <div class="grid">
-    <div class="card">Comic 1</div>
-    <div class="card">Comic 2</div>
+    <!-- Comic Card 1 -->
+    <a href="https://drive.google.com/file/d/1PP1-7OUockXadgvuKF0uMEau8qboX-2r/preview" class="card-link">
+        <div class="card">
+            <img src="images/comics/नागराज इन्फेक्टेड.jpg" alt="नागराज इन्फेक्टेड">
+            <div class="card-title">नागराज इन्फेक्टेड</div>
+        </div>
+    </a>
+
+    <!-- Comic Card 2 -->
+    <a href="https://drive.google.com/file/d/196ppoveVKL5h2NuLIDtvla92MT0PtJak/preview" class="card-link">
+        <div class="card">
+            <img src="images/comics/मृत्युजीवी.jpg" alt="मृत्युजीवी">
+            <div class="card-title">मृत्युजीवी</div>
+        </div>
+    </a>
     <div class="card">Comic 3</div>
     <div class="card">Comic 4</div>
     <div class="card">Comic 5</div>
