--- a/index.html
+++ b/index.html
@@ -37,7 +37,22 @@
 
 <!-- SEARCH OVERLAY -->
 <div class="search-overlay" id="searchOverlay">
-  <input type="text" placeholder="Search comics...">
+  
+  <div class="search-container">
+    
+    <!-- Search Input -->
+    <input 
+      type="text" 
+      id="searchInput" 
+      placeholder="Search heroes, comics..." 
+      autocomplete="off"
+    >
+
+    <!-- Suggestions Dropdown -->
+    <div class="search-suggestions" id="searchSuggestions"></div>
+
+  </div>
+
 </div>
 
 <!-- WELCOME -->
